--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .sectionCSS{
-    @apply w-[90vw] flex flex-col gap-4 items-center rounded-md md:w-[72vw] dark:border-dark-text bg-light-primary dark:bg-[#161D29] text-light-text dark:text-dark-text;
+    @apply w-[90vw] flex flex-col gap-4 items-center rounded-md md:w-[72vw] dark:border-dark-text bg-light-primary dark:bg-gray-800 text-light-text dark:text-dark-text;
 }
 
 .customButton{
